@@ -40,5 +40,5 @@ ntbt_function_object_data <-
     Call[[1]] <- get_function_name(as.character(Call[[1]]))
     if (is.null(ret <- eval(Call, envir = parent.frame())))
       return (invisible(data))
-    ret  
+    ret
   }
