@@ -15,7 +15,7 @@
   (one line) way to to create new interfaces "on demand" 
   (see \code{\link{ntbt_function_formula_data}}) that should cover
   the vast majority of functions with formulas
-  (only 4 out of 92 interfaces implemented so far
+  (only 4 out of 93 interfaces implemented so far
   require nonstandard treatment).
   
   Currently, there are interfaces for:
